Updated selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   volume={},
   number={},
   pages={1-5},
-  doi={10.1109/ICASSP49357.2023.10094573}}
+  doi={10.1109/ICASSP49357.2023.10094573},
+  selected = {true}}
 
 
 @inproceedings{10.1145/3581791.3596856,
@@ -27,6 +28,7 @@ pages = {84–95},
 numpages = {12},
 keywords = {acoustic sensing, mobile health, wearable technologies, wireless earbuds, hearing screening, otoacoustic emissions},
 location = {Helsinki, Finland},
-series = {MobiSys '23}
+series = {MobiSys '23},
+selected = {true}
 }
 
