Added acoustic swarm

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,3 +32,21 @@ series = {MobiSys '23},
 selected = {true}
 }
 
+@Article{Itani2023,
+author={Itani, Malek
+and Chen, Tuochao
+and Yoshioka, Takuya
+and Gollakota, Shyamnath},
+title={Creating speech zones with self-distributing acoustic swarms},
+journal={Nature Communications},
+year={2023},
+month={Sep},
+day={21},
+volume={14},
+number={1},
+pages={5684},
+abstract={Imagine being in a crowded room with a cacophony of speakers and having the ability to focus on or remove speech from a specific 2D region. This would require understanding and manipulating an acoustic scene, isolating each speaker, and associating a 2D spatial context with each constituent speech. However, separating speech from a large number of concurrent speakers in a room into individual streams and identifying their precise 2D locations is challenging, even for the human brain. Here, we present the first acoustic swarm that demonstrates cooperative navigation with centimeter-resolution using sound, eliminating the need for cameras or external infrastructure. Our acoustic swarm forms a self-distributing wireless microphone array, which, along with our attention-based neural network framework, lets us separate and localize concurrent human speakers in the 2D space, enabling speech zones. Our evaluations showed that the acoustic swarm could localize and separate 3-5 concurrent speech sources in real-world unseen reverberant environments with median and 90-percentile 2D errors of 15 cm and 50 cm, respectively. Our system enables applications like mute zones (parts of the room where sounds are muted), active zones (regions where sounds are captured), multi-conversation separation and location-aware interaction.},
+issn={2041-1723},
+doi={10.1038/s41467-023-40869-8},
+url={https://doi.org/10.1038/s41467-023-40869-8}
+}
