--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,7 @@ issn={2041-1723},
 doi={10.1038/s41467-023-40869-8},
 url={https://doi.org/10.1038/s41467-023-40869-8},
 selected = {true},
-preview = {SwarmRetraction}
+preview = {SwarmRetraction.gif}
 }
 
 @inproceedings{10.1145/3581791.3596856,
@@ -39,7 +39,7 @@ keywords = {acoustic sensing, mobile health, wearable technologies, wireless ear
 location = {Helsinki, Finland},
 series = {MobiSys '23},
 selected = {true},
-preview = {oaebuds}
+preview = {oaebuds.png}
 }
 
 @inproceedings{veluri2023real,
@@ -51,5 +51,5 @@ preview = {oaebuds}
   organization={IEEE},
   selected = {true},
   abstract = {We present the first neural network model to achieve real-time and streaming target sound extraction. To accomplish this, we propose Waveformer, an encoder-decoder architecture with a stack of dilated causal convolution layers as the encoder, and a transformer decoder layer as the decoder. This hybrid architecture uses dilated causal convolutions for processing large receptive fields in a computationally efficient manner, while also leveraging the generalization performance of transformer-based architectures. Our evaluations show as much as 2.2–3.3 dB improvement in SI-SNRi compared to the prior models for this task while having a 1.2–4x smaller model size and a 1.5–2x lower runtime. We provide code, dataset, and audio samples: https://waveformer.cs.washington.edu/.},
-  preview = {waveformer}
+  preview = {waveformer.png}
 }
