--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,6 @@
 ---
 ---
 
-@article{Itani2023,
 @inproceedings{10.1145/3586183.3606779,
 author = {Veluri, Bandhav and Itani, Malek and Chan, Justin and Yoshioka, Takuya and Gollakota, Shyamnath},
 title = {Semantic Hearing: Programming Acoustic Scenes with Binaural Hearables},
@@ -19,7 +18,7 @@ keywords = {Spatial computing, binaural target sound extraction, attention, eara
 location = {San Francisco, CA, USA},
 series = {UIST '23},
 selected = {true},
-preview = {semantic-hearing.png}
+preview = {semantichearing.png}
 }
 
 @article{Itani2023,
