--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@inproceedings{10.1145/3613904.3642057,
+author = {Veluri, Bandhav and Itani, Malek and Chen, Tuochao and Yoshioka, Takuya and Gollakota, Shyamnath},
+title = {Look Once to Hear: Target Speech Hearing with Noisy Examples},
+year = {2024},
+isbn = {9798400703300},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3613904.3642057},
+doi = {10.1145/3613904.3642057},
+abstract = {In crowded settings, the human brain can focus on speech from a target speaker, given prior knowledge of how they sound. We introduce a novel intelligent hearable system that achieves this capability, enabling target speech hearing to ignore all interfering speech and noise, but the target speaker. A na\"{\i}ve approach is to require a clean speech example to enroll the target speaker. This is however not well aligned with the hearable application domain since obtaining a clean example is challenging in real world scenarios, creating a unique user interface problem. We present the first enrollment interface where the wearer looks at the target speaker for a few seconds to capture a single, short, highly noisy, binaural example of the target speaker. This noisy example is used for enrollment and subsequent speech extraction in the presence of interfering speakers and noise. Our system achieves a signal quality improvement of 7.01&nbsp;dB using less than 5 seconds of noisy enrollment audio and can process 8&nbsp;ms of audio chunks in 6.24&nbsp;ms on an embedded CPU. Our user studies demonstrate generalization to real-world static and mobile speakers in previously unseen indoor and outdoor multipath environments. Finally, our enrollment interface for noisy examples does not cause performance degradation compared to clean examples, while being convenient and user-friendly. Taking a step back, this paper takes an important step towards enhancing the human auditory perception with artificial intelligence.},
+booktitle = {Proceedings of the CHI Conference on Human Factors in Computing Systems},
+articleno = {37},
+numpages = {16},
+keywords = {Augmented hearing, auditory perception, spatial computing},
+location = {<conf-loc>, <city>Honolulu</city>, <state>HI</state>, <country>USA</country>, </conf-loc>},
+series = {CHI '24},
+selected = {true},
+preview = {lookoncetohear.png}
+}
+
 @inproceedings{10.1145/3586183.3606779,
 author = {Veluri, Bandhav and Itani, Malek and Chan, Justin and Yoshioka, Takuya and Gollakota, Shyamnath},
 title = {Semantic Hearing: Programming Acoustic Scenes with Binaural Hearables},
