--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@inproceedings{chen24d_interspeech,
+  title     = {Target conversation extraction: Source separation using turn-taking dynamics},
+  author    = {Chen, Tuochao and Wang, Qirui and Wu, Bohan and Itani, Malek and Eskimez, Emre Sefik and Yoshioka, Takuya and Gollakota, Shyamnath},
+  year      = {2024},
+  booktitle = {Interspeech 2024},
+  pages     = {3550--3554},
+  doi       = {10.21437/Interspeech.2024-225},
+  issn      = {2958-1796},
+  preview = {tce.png}
+}
+
+@inproceedings{srinivas24_interspeech,
+  title     = {Knowledge boosting during low-latency inference},
+  author    = {Srinivas, Vidya and Itani, Malek and Chen, Tuochao and Eskimez, Sefik Emre and Yoshioka, Takuya and Gollakota, Shyamnath},
+  year      = {2024},
+  booktitle = {Interspeech 2024},
+  pages     = {4338--4342},
+  doi       = {10.21437/Interspeech.2024-331},
+  issn      = {2958-1796},
+  preview = {knowledgeboosting.png}
+}
+
 @inproceedings{10.1145/3613904.3642057,
 author = {Veluri, Bandhav and Itani, Malek and Chen, Tuochao and Yoshioka, Takuya and Gollakota, Shyamnath},
 title = {Look Once to Hear: Target Speech Hearing with Noisy Examples},
