Added Sound bubbles

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{chen2024hearable,
+  title={Hearable devices with sound bubbles},
+  author={Chen, Tuochao and Itani, Malek and Eskimez, Sefik Emre and Yoshioka, Takuya and Gollakota, Shyamnath},
+  journal={Nature Electronics},
+  pages={1--12},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  abstract = {The human auditory system has a limited ability to perceive distance and distinguish speakers in crowded settings. A headset technology that can create a sound bubble in which all speakers within the bubble are audible but speakers and noise outside the bubble are suppressed could augment human hearing. However, developing such technology is challenging. Here, we report an intelligent headset system capable of creating sound bubbles. The system is based on real-time neural networks that use acoustic data from up to six microphones integrated into noise-cancelling headsets and are run on the device, processing 8 ms audio chunks in 6.36 ms on an embedded central processing unit. Our neural networks can generate sound bubbles with programmable radii between 1 m and 2 m, and with output signals that reduce the intensity of sounds outside the bubble by 49 dB. With previously unseen environments and wearers, our system can focus on up to two speakers within the bubble, with one to two interfering speakers and noise outside the bubble.},
+  preview = {soundbubbles.png},
+  selected = {true},
+  website = {https://soundbubble.cs.washington.edu/},
+}
+
+
 @inproceedings{chen24d_interspeech,
   title     = {Target conversation extraction: Source separation using turn-taking dynamics},
   author    = {Chen, Tuochao and Wang, Qirui and Wu, Bohan and Itani, Malek and Eskimez, Emre Sefik and Yoshioka, Takuya and Gollakota, Shyamnath},
