--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,28 @@
 ---
 ---
+@inproceedings{hu-etal-2025-proactive,
+    title = "Proactive Hearing Assistants that Isolate Egocentric Conversations",
+    author = "Hu, Guilin  and
+      Itani, Malek  and
+      Chen, Tuochao  and
+      Gollakota, Shyamnath",
+    editor = "Christodoulopoulos, Christos  and
+      Chakraborty, Tanmoy  and
+      Rose, Carolyn  and
+      Peng, Violet",
+    booktitle = "Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2025",
+    address = "Suzhou, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.emnlp-main.1289/",
+    pages = "25377--25394",
+    ISBN = "979-8-89176-332-6",
+    abstract = {We introduce proactive hearing assistants that automatically identify and separate the wearer{'}s conversation partners, without requiring explicit prompts. Our system operates on egocentric binaural audio and uses the wearer{'}s self-speech as an anchor, leveraging turn-taking behavior and dialogue dynamics to infer conversational partners and suppress others. To enable real-time, on-device operation, we propose a dual-model architecture: a lightweight streaming model runs every 12.5 ms for low-latency extraction of the conversation partners, while a slower model runs less frequently to capture longer-range conversational dynamics. Results on real-world 2- and 3-speaker conversation test sets, collected with binaural egocentric hardware from 11 participants totaling 6.8 hours, show generalization in identifying and isolating conversational partners in multi-conversation settings. Our work marks a step toward hearing assistants that adapt proactively to conversational dynamics and engagement.},
+    selected = {true},
+    preview = {proactive-assistant.png},
+    pdf = {proactive-assistant.pdf},
+}
 
 @misc{itani2025wirelesshearablesprogrammablespeech,
       title={Wireless Hearables With Programmable Speech AI Accelerators}, 
@@ -25,8 +48,7 @@
       url={https://arxiv.org/abs/2508.03047}, 
       abstract = {Speech separation on hearable devices can enable transformative augmented and enhanced hearing capabilities. However, state-of-the-art speech separation networks cannot run in real-time on tiny, low-power neural accelerators designed for hearables, due to their limited compute capabilities. We present TF-MLPNet, the first speech separation network capable of running in real-time on such low-power accelerators while outperforming existing streaming models for blind speech separation and target speech extraction. Our network operates in the time-frequency domain, processing frequency sequences with stacks of fully connected layers that alternate along the channel and frequency dimensions, and independently processing the time sequence at each frequency bin using convolutional layers. Results show that our mixed-precision quantization-aware trained (QAT) model can process 6 ms audio chunks in real-time on the GAP9 processor, achieving a 3.5-4x runtime reduction compared to prior speech separation models.},
       pdf = {tfmlpnet.pdf},
-      preview = {tfmlpnet.png},
-      selected = {true},
+      preview = {tfmlpnet.png}
 }
 
 @inproceedings{itani25_interspeech,
@@ -39,8 +61,7 @@
   issn      = {2958-1796},
   abstract = {We present the first neural target speech extraction (TSE) system that uses human feedback for iterative refinement. Our approach allows users to mark specific segments of the TSE output, generating an edit mask. The refinement system then improves the marked sections while preserving unmarked regions. Since large-scale datasets of human-marked errors are difficult to collect, we generate synthetic datasets using various automated masking functions and train models on each. Evaluations show that models trained with noise power-based masking (in dBFS) and probabilistic thresholding perform best, aligning with human annotations. In a study with 22 participants, users showed a preference for refined outputs over baseline TSE. Our findings demonstrate that human-in-the-loop refinement is a promising approach for improving the performance of neural speech extraction.},
   pdf = {neural_speech_extraction.pdf},
-  preview = {fgtse.png},
-  selected = {true},
+  preview = {fgtse.png}
 }
 
 @article{chen2024hearable,
